increased jumbotron size in smaller screens to 60vh, fixed text wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,9 +275,9 @@ button[type="submit"] {
     }
 }
 
-@media(min-width: 320px) {
+@media(max-width: 320px) {
     .callout-container {
-        height: 50vh;
+        height: 60vh;
     }
 
 @media only screen 
